--- a/compose-3-instances-1-scheduler.yml
+++ b/compose-3-instances-1-scheduler.yml
@@ -46,7 +46,7 @@ services:
         "-resources-path",
         "/components",
         "-config",
-        "/dapr-config/config-with-schedule-reminders-feature.yml",
+        "/dapr-config/config.yml",
         "-log-level",
         "info",
       ]
@@ -93,7 +93,7 @@ services:
         "-resources-path",
         "/components",
         "-config",
-        "/dapr-config/config-with-schedule-reminders-feature.yml",
+        "/dapr-config/config.yml",
         "-log-level",
         "info",
       ]
@@ -140,7 +140,7 @@ services:
         "-resources-path",
         "/components",
         "-config",
-        "/dapr-config/config-with-schedule-reminders-feature.yml",
+        "/dapr-config/config.yml",
         "-log-level",
         "info",
       ]
