--- a/compose-1-instance-1-scheduler.yml
+++ b/compose-1-instance-1-scheduler.yml
@@ -39,7 +39,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler-0:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
