--- a/compose-1-instances-1-schedulers-in-mem.yml
+++ b/compose-1-instances-1-schedulers-in-mem.yml
@@ -38,7 +38,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler-0:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components-in-mem/:/components"
