--- a/compose-10-instances.yml
+++ b/compose-10-instances.yml
@@ -38,7 +38,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -74,7 +74,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -110,7 +110,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -146,7 +146,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -182,7 +182,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -218,7 +218,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -254,7 +254,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -290,7 +290,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -326,7 +326,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -362,7 +362,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
