--- a/compose-5-instances-3-schedulers.yml
+++ b/compose-5-instances-3-schedulers.yml
@@ -38,7 +38,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -74,7 +74,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -110,7 +110,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -146,7 +146,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -182,7 +182,7 @@ services:
      "-placement-host-address", "placement:50005",
      "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
