--- a/compose-1-instance-1-scheduler.yml
+++ b/compose-1-instance-1-scheduler.yml
@@ -18,7 +18,8 @@ services:
   ############################
   workflow-app-a:
     environment:
-      - APP_INSTANCE=1
+      - REGISTER_WORKFLOWS=true
+      - REGISTER_ACTIVITIES=true
       - DAPR_HTTP_PORT=3500
     build:
       context: .
