--- a/compose-5-instances-3-schedulers.yml
+++ b/compose-5-instances-3-schedulers.yml
@@ -18,7 +18,8 @@ services:
   ############################
   workflow-app-a:
     environment:
-      - APP_INSTANCE=1
+      - REGISTER_WORKFLOWS=true
+      - REGISTER_ACTIVITIES=true
     build:
       context: .
       dockerfile: Workflow/Dockerfile
@@ -55,7 +56,8 @@ services:
   workflow-app-b:
     environment:
       - DAPR_GRPC_PORT=50002
-      - APP_INSTANCE=2
+      - REGISTER_WORKFLOWS=true
+      - REGISTER_ACTIVITIES=true
     build:
       context: .
       dockerfile: Workflow/Dockerfile
@@ -91,7 +93,8 @@ services:
   workflow-app-c:
     environment:
       - DAPR_GRPC_PORT=50003
-      - APP_INSTANCE=3
+      - REGISTER_WORKFLOWS=true
+      - REGISTER_ACTIVITIES=true
     build:
       context: .
       dockerfile: Workflow/Dockerfile
@@ -127,7 +130,8 @@ services:
   workflow-app-d:
     environment:
       - DAPR_GRPC_PORT=50004
-      - APP_INSTANCE=4
+      - REGISTER_WORKFLOWS=true
+      - REGISTER_ACTIVITIES=true
     build:
       context: .
       dockerfile: Workflow/Dockerfile
@@ -163,7 +167,8 @@ services:
   workflow-app-e:
     environment:
       - DAPR_GRPC_PORT=50005
-      - APP_INSTANCE=5
+      - REGISTER_WORKFLOWS=true
+      - REGISTER_ACTIVITIES=true
     build:
       context: .
       dockerfile: Workflow/Dockerfile
