--- a/compose-1-instance-1-scheduler.yml
+++ b/compose-1-instance-1-scheduler.yml
@@ -18,8 +18,9 @@ services:
   ############################
   workflow-app-a:
     environment:
-      - APP_INSTANCE=1
       - DAPR_HTTP_PORT=3500
+      - REGISTER_WORKFLOWS=true
+      - REGISTER_ACTIVITIES=true
     build:
       context: .
       dockerfile: Workflow/Dockerfile
